force-app/main/default/objects/Supported_Object__mdt/Supported_Object__mdt.object-meta.xml
<CustomObject>
    <description>Defines which Salesforce objects can be used for document generation. Admins configure this to add support for new objects without code changes.</description>
    <label>Docgen Supported Object</label>
    <pluralLabel>Docgen Supported Objects</pluralLabel>
</CustomObject>