force-app/main/default/objects/Supported_Object__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this object type is enabled for document generation. Uncheck to disable without deleting the configuration.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>