force-app/main/default/objects/Supported_Object__mdt/fields/Lookup_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field_API_Name__c</fullName>
    <description>API name of the lookup field on Generated_Document__c that references this object type (e.g., &quot;Account__c&quot;, &quot;Contact__c&quot;).</description>
    <label>Lookup Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>