force-app/main/default/objects/Supported_Object__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API name of the Salesforce object that can be used for document generation (e.g., &quot;Account&quot;, &quot;Contact&quot;, &quot;Custom__c&quot;).</description>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>